--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,6 +1,10 @@
 # -----[Color Theme]-----
 include tokyo-night.conf
 
+
+hide_window_decorations yes
+
+
 # -----[Fonts]-----
 font_family      0xProto
 bold_font        0xProto
